[tool.poetry]
name = "aistreaming"
version = "0.1.0"
description = ""
authors = ["Chatchai Wangwiwattana <redeian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.1"
uvicorn = "^0.27.0.post1"
openai = "^1.11.0"
pydantic = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
